--- a/src/components/mc/cpu/Makefile.am
+++ b/src/components/mc/cpu/Makefile.am
@@ -2,10 +2,21 @@
 # Copyright (C) Mellanox Technologies Ltd. 2020-2021.  ALL RIGHTS RESERVED.
 #
 
-sources =    \
-	mc_cpu.h \
-	mc_cpu_reduce.h \
-	mc_cpu.c
+sources =                         \
+	mc_cpu.h                      \
+	mc_cpu.c                      \
+	reduce/mc_cpu_reduce.h        \
+	reduce/mc_cpu_reduce_int8.c   \
+	reduce/mc_cpu_reduce_int16.c  \
+	reduce/mc_cpu_reduce_int32.c  \
+	reduce/mc_cpu_reduce_int64.c  \
+	reduce/mc_cpu_reduce_uint8.c  \
+	reduce/mc_cpu_reduce_uint16.c \
+	reduce/mc_cpu_reduce_uint32.c \
+	reduce/mc_cpu_reduce_uint64.c \
+	reduce/mc_cpu_reduce_float.c  \
+	reduce/mc_cpu_reduce_double.c
+
 
 module_LTLIBRARIES        = libucc_mc_cpu.la
 libucc_mc_cpu_la_SOURCES  = $(sources)
