--- a/.ci/Dockerfile.centos8
+++ b/.ci/Dockerfile.centos8
@@ -1,19 +1,19 @@
 ARG CUDA_VER='11.2.1'
 FROM nvidia/cuda:${CUDA_VER}-devel-centos8
 #==============================================================================
-ARG TORCH_UCC_ROOT_DIR=/opt/nvidia/torch-ucc
-ENV TORCH_UCC_SRC_DIR=${TORCH_UCC_ROOT_DIR}/src
-ENV TORCH_UCC_PKG_DIR=${TORCH_UCC_ROOT_DIR}/pkg
-ENV TORCH_UCC_BIN_DIR=${TORCH_UCC_ROOT_DIR}/bin
-ENV TORCH_UCC_WORKLOADS_DIR=${TORCH_UCC_ROOT_DIR}/workloads
+ARG NVIDIA_ROOT_DIR=/opt/nvidia
+ENV SRC_DIR=${NVIDIA_ROOT_DIR}/src
+ENV PKG_DIR=${NVIDIA_ROOT_DIR}/pkg
+ENV BIN_DIR=${NVIDIA_ROOT_DIR}/bin
+ENV WORKLOADS_DIR=${NVIDIA_ROOT_DIR}/workloads
 ENV TORCH_UCC_GITHUB_URL=https://github.com/openucx/torch-ucc.git
 ENV TORCH_UCC_BRANCH=master
 ENV CUDA_HOME=/usr/local/cuda
 ENV UCX_GITHUB_URL=https://github.com/openucx/ucx.git
 ENV UCX_BRANCH=master
 ENV UCX_BUILD_TYPE=release-mt
-ENV UCX_INSTALL_DIR=${TORCH_UCC_BIN_DIR}/ucx/build-${UCX_BUILD_TYPE}
-ENV UCC_INSTALL_DIR=${TORCH_UCC_BIN_DIR}/ucc/build
+ENV UCX_INSTALL_DIR=${BIN_DIR}/ucx/build-${UCX_BUILD_TYPE}
+ENV UCC_INSTALL_DIR=${BIN_DIR}/ucc/build
 #==============================================================================
 RUN yum groupinstall -y \
     'Development Tools' \
@@ -44,46 +44,46 @@ RUN mkdir -p /var/run/sshd && \
     ssh-keygen -A &&  \
     rm -f /run/nologin
 #==============================================================================
-RUN mkdir -p ${TORCH_UCC_SRC_DIR} && \
-    mkdir -p ${TORCH_UCC_PKG_DIR} && \
-    mkdir -p ${TORCH_UCC_BIN_DIR} && \
-    mkdir -p ${TORCH_UCC_WORKLOADS_DIR}
+RUN mkdir -p ${SRC_DIR} && \
+    mkdir -p ${PKG_DIR} && \
+    mkdir -p ${BIN_DIR} && \
+    mkdir -p ${WORKLOADS_DIR}
 
-RUN git clone ${TORCH_UCC_GITHUB_URL} ${TORCH_UCC_SRC_DIR} && \
-    cd ${TORCH_UCC_SRC_DIR} && \
+RUN git clone ${TORCH_UCC_GITHUB_URL} ${SRC_DIR} && \
+    cd ${SRC_DIR} && \
     git checkout ${TORCH_UCC_BRANCH}
 
-RUN mkdir -p ${TORCH_UCC_SRC_DIR}/ucx && \
-    git clone --recursive ${UCX_GITHUB_URL} ${TORCH_UCC_SRC_DIR}/ucx && \
-    cd ${TORCH_UCC_SRC_DIR}/ucx && \
+RUN mkdir -p ${SRC_DIR}/ucx && \
+    git clone --recursive ${UCX_GITHUB_URL} ${SRC_DIR}/ucx && \
+    cd ${SRC_DIR}/ucx && \
     git checkout ${UCX_BRANCH}
 
-COPY . ${TORCH_UCC_SRC_DIR}/ucc
+COPY . ${SRC_DIR}/ucc
 #==============================================================================
 # Build UCX
-RUN ${TORCH_UCC_SRC_DIR}/ucc/.ci/scripts/build_ucx.sh
+RUN ${SRC_DIR}/ucc/.ci/scripts/build_ucx.sh
 ENV PATH=${UCX_INSTALL_DIR}/bin:${PATH}
 #==============================================================================
 # Configure Python
-RUN ${TORCH_UCC_SRC_DIR}/ucc/.ci/scripts/configure_python.sh
+RUN ${SRC_DIR}/ucc/.ci/scripts/configure_python.sh
 #==============================================================================
 # Build UCC
-RUN ${TORCH_UCC_SRC_DIR}/ucc/.ci/scripts/build_ucc.sh
+RUN ${SRC_DIR}/ucc/.ci/scripts/build_ucc.sh
 #==============================================================================
 # Install PyTorch
-RUN ${TORCH_UCC_SRC_DIR}/ucc/.ci/scripts/install_torch.sh
+RUN ${SRC_DIR}/ucc/.ci/scripts/install_torch.sh
 #==============================================================================
 # Install workloads
-WORKDIR ${TORCH_UCC_WORKLOADS_DIR}
+WORKDIR ${WORKLOADS_DIR}
 RUN git clone https://github.com/facebookresearch/dlrm.git && \
-    cd ${TORCH_UCC_WORKLOADS_DIR}/dlrm && \
-    pip3 install -r ${TORCH_UCC_WORKLOADS_DIR}/dlrm/requirements.txt && \
+    cd ${WORKLOADS_DIR}/dlrm && \
+    pip3 install -r ${WORKLOADS_DIR}/dlrm/requirements.txt && \
     pip3 install tensorboard
 RUN git clone https://github.com/facebookresearch/param.git && \
-    pip3 install -r ${TORCH_UCC_WORKLOADS_DIR}/param/requirements.txt
+    pip3 install -r ${WORKLOADS_DIR}/param/requirements.txt
 #==============================================================================
 # Install torch_ucc (UCC version) python module and build a wheel package
-RUN ${TORCH_UCC_SRC_DIR}/ucc/.ci/scripts/install_torch_ucc.sh
+RUN ${SRC_DIR}/ucc/.ci/scripts/install_torch_ucc.sh
 #==============================================================================
 RUN groupadd -g 11429 swx-jenkins
 RUN adduser --no-create-home --uid 6213 --gid 11429 --home /labhome/swx-jenkins swx-jenkins
