--- a/.ci/job_matrix.yaml
+++ b/.ci/job_matrix.yaml
@@ -15,9 +15,9 @@ env:
   CUDA_VER: '11.2.1'
   UCC_URI_SUFFIX: 'ucc/${UCC_VERSION}/x86_64/centos8/cuda${CUDA_VER}'
   UCC_DOCKER_IMAGE_NAME: '${registry_host}${registry_path}/${UCC_URI_SUFFIX}'
-  TORCH_UCC_ROOT_DIR: '/opt/nvidia/torch-ucc'
-  TORCH_UCC_SRC_DIR: '${TORCH_UCC_ROOT_DIR}/src'
-  TORCH_UCC_BIN_DIR: '${TORCH_UCC_ROOT_DIR}/bin'
+  NVIDIA_ROOT_DIR: '/opt/nvidia'
+  SRC_DIR: '${NVIDIA_ROOT_DIR}/src'
+  BIN_DIR: '${NVIDIA_ROOT_DIR}/bin'
 
 docker_opt: '--pull always --network=host --uts=host --ipc=host --ulimit stack=67108864 --ulimit memlock=-1 --security-opt seccomp=unconfined --cap-add=SYS_ADMIN --device=/dev/infiniband/ --gpus all --user root'
 
@@ -28,9 +28,18 @@ runs_on_dockers:
     tag: '${BUILD_NUMBER}',
     arch: 'x86_64',
     uri: '${UCC_URI_SUFFIX}',
-    build_args: '--network=host --rm --no-cache --build-arg CUDA_VER=${CUDA_VER} --build-arg TORCH_UCC_ROOT_DIR=${TORCH_UCC_ROOT_DIR}',
+    build_args: '--rm --no-cache --build-arg CUDA_VER=${CUDA_VER} --build-arg NVIDIA_ROOT_DIR=${NVIDIA_ROOT_DIR}',
     cloud: 'swx-k8s',
     nodeLabel: 'dockerserver && swx-clx01',
+  }
+  - {
+    file: '.ci/Dockerfile.fedora33',
+    name: 'fedora33',
+    tag: 'latest',
+    arch: 'x86_64',
+    uri: 'x86_64/fedora33',
+    build_args: '--rm --no-cache',
+    cloud: 'swx-k8s',
   }
 
 # bare metal
@@ -39,20 +48,11 @@ runs_on_agents:
 
 steps:
   #============================================================================
-  - name: Check Env
-    agentSelector: "{nodeLabel: 'swx-clx01'}"
-    containerSelector: "{name:'centos8'}"
+  - name: Check Code Format
+    containerSelector: "{name:'fedora33'}"
     run: |
-      echo "INFO: check environment"
-      hostname
-      printenv
-      cat /proc/1/cgroup
-      cat /etc/*release*
-      id
-      find /opt/nvidia
-      ibv_devinfo
-      nvidia-smi
-      nvidia-smi topo -m
+      echo "INFO: check code format"
+      ${SRC_DIR}/ucc/.ci/scripts/check_code_format.sh
   #============================================================================
   - name: Run UCC tests
     containerSelector: "{name:'centos8'}"
@@ -61,7 +61,7 @@ steps:
       hostname
       cat /proc/1/cgroup
       pip3 list | grep torch
-      ${TORCH_UCC_SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh
+      ${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh
   #============================================================================
   - name: Run Torch-UCC tests (UCC)
     containerSelector: "{name:'centos8'}"
@@ -70,7 +70,7 @@ steps:
       hostname
       cat /proc/1/cgroup
       pip3 list | grep torch
-      ${TORCH_UCC_SRC_DIR}/ucc/.ci/scripts/run_tests_torch_ucc.sh
+      ${SRC_DIR}/ucc/.ci/scripts/run_tests_torch_ucc.sh
   #============================================================================
   - name: Run docker containers
     agentSelector: "{nodeLabel: 'swx-clx01'}"
