--- a/.ci/Dockerfile.centos8
+++ b/.ci/Dockerfile.centos8
@@ -14,6 +14,7 @@ ENV UCX_BRANCH=master
 ENV UCX_BUILD_TYPE=release-mt
 ENV UCX_INSTALL_DIR=${BIN_DIR}/ucx/build-${UCX_BUILD_TYPE}
 ENV UCC_INSTALL_DIR=${BIN_DIR}/ucc/build
+ENV ENABLE_VALGRIND=${ENABLE_VALGRIND}
 #==============================================================================
 RUN yum groupinstall -y \
     'Development Tools' \
