--- a/.ci/job_matrix.yaml
+++ b/.ci/job_matrix.yaml
@@ -14,7 +14,9 @@ volumes:
 env:
   CUDA_VER: '11.2.1'
   UCC_URI_SUFFIX: 'ucc/${UCC_VERSION}/x86_64/centos8/cuda${CUDA_VER}'
+  UCC_URI_SUFFIX_VALGRIND: 'ucc/${UCC_VERSION}/x86_64/centos8-valgrind/cuda${CUDA_VER}'
   UCC_DOCKER_IMAGE_NAME: '${registry_host}${registry_path}/${UCC_URI_SUFFIX}'
+  UCC_DOCKER_IMAGE_NAME_VALGRIND: '${registry_host}${registry_path}/${UCC_URI_SUFFIX_VALGRIND}'
   NVIDIA_ROOT_DIR: '/opt/nvidia'
   SRC_DIR: '${NVIDIA_ROOT_DIR}/src'
   BIN_DIR: '${NVIDIA_ROOT_DIR}/bin'
@@ -28,7 +30,17 @@ runs_on_dockers:
     tag: '${BUILD_NUMBER}',
     arch: 'x86_64',
     uri: '${UCC_URI_SUFFIX}',
-    build_args: '--rm --no-cache --build-arg CUDA_VER=${CUDA_VER} --build-arg NVIDIA_ROOT_DIR=${NVIDIA_ROOT_DIR}',
+    build_args: '--rm --no-cache --build-arg CUDA_VER=${CUDA_VER} --build-arg NVIDIA_ROOT_DIR=${NVIDIA_ROOT_DIR} --build-arg ENABLE_VALGRIND=no',
+    cloud: 'swx-k8s',
+    nodeLabel: 'dockerserver && swx-clx01',
+  }
+  - {
+    file: '.ci/Dockerfile.centos8',
+    name: 'centos8-valgrind',
+    tag: '${BUILD_NUMBER}',
+    arch: 'x86_64',
+    uri: '${UCC_URI_SUFFIX_VALGRIND}',
+    build_args: '--rm --no-cache --build-arg CUDA_VER=${CUDA_VER} -build-arg NVIDIA_ROOT_DIR=${NVIDIA_ROOT_DIR} --build-arg ENABLE_VALGRIND=yes',
     cloud: 'swx-k8s',
     nodeLabel: 'dockerserver && swx-clx01',
   }
@@ -46,53 +58,73 @@ runs_on_dockers:
 runs_on_agents:
   - nodeLabel: 'swx-clx01'
 
+timeout_minutes: 180
+
 steps:
-  #============================================================================
-  - name: Check Code Format
-    containerSelector: "{name:'fedora33'}"
-    run: |
-      echo "INFO: check code format"
-      ${SRC_DIR}/ucc/.ci/scripts/check_code_format.sh
-  #============================================================================
-  - name: Run UCC tests
-    containerSelector: "{name:'centos8'}"
-    run: |
-      echo "INFO: Run UCC tests"
-      hostname
-      cat /proc/1/cgroup
-      pip3 list | grep torch
-      ${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh
-  #============================================================================
-  - name: Run Torch-UCC tests (UCC)
-    containerSelector: "{name:'centos8'}"
-    run: |
-      echo "INFO: Run Torch-UCC tests (UCC)"
-      hostname
-      cat /proc/1/cgroup
-      pip3 list | grep torch
-      ${SRC_DIR}/ucc/.ci/scripts/run_tests_torch_ucc.sh
-  #============================================================================
-  - name: Run docker containers
+#  #============================================================================
+#  - name: Check Code Format
+#    containerSelector: "{name:'fedora33'}"
+#    run: |
+#    echo "INFO: check code format"
+#      ${SRC_DIR}/ucc/.ci/scripts/check_code_format.sh
+#  #============================================================================
+#  - name: Run UCC tests
+#    containerSelector: "{name:'centos8'}"
+#    run: |
+#    echo "INFO: Run UCC tests"
+#      hostname
+#      cat /proc/1/cgroup
+#      pip3 list | grep torch
+#      ${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh
+#  #============================================================================
+#  - name: Run Torch-UCC tests (UCC)
+#    containerSelector: "{name:'centos8'}"
+#    run: |
+#    echo "INFO: Run Torch-UCC tests (UCC)"
+#      hostname
+#      cat /proc/1/cgroup
+#      pip3 list | grep torch
+#      ${SRC_DIR}/ucc/.ci/scripts/run_tests_torch_ucc.sh
+#  #============================================================================
+#  - name: Run docker containers
+#    agentSelector: "{nodeLabel: 'swx-clx01'}"
+#    run: |
+#    echo "INFO: Run docker containers"
+#      ${WORKSPACE}/.ci/scripts/run_docker.sh
+#  #============================================================================
+#  - name: Run UCC MPI tests
+#    agentSelector: "{nodeLabel: 'swx-clx01'}"
+#    run: |
+#    echo "INFO: Run UCC MPI tests"
+#      ${WORKSPACE}/.ci/scripts/run_tests_ucc_mpi_docker.sh
+#  #============================================================================
+#  - name: Run DLRM tests (UCC/GPU)
+#    agentSelector: "{nodeLabel: 'swx-clx01'}"
+#    run: |
+#    echo "INFO: Run DLRM tests (UCC/GPU)"
+#      ${WORKSPACE}/.ci/scripts/run_dlrm_docker.sh
+#  #============================================================================
+#  - name: Stop docker containers
+#    agentSelector: "{nodeLabel: 'swx-clx01'}"
+#    run: |
+#    echo "INFO: Stop docker containers"
+#      ${WORKSPACE}/.ci/scripts/stop_docker.sh
+#============================================================================
+  - name: Run docker containers (valgrind)
     agentSelector: "{nodeLabel: 'swx-clx01'}"
     run: |
       echo "INFO: Run docker containers"
       ${WORKSPACE}/.ci/scripts/run_docker.sh
   #============================================================================
-  - name: Run UCC MPI tests
+  - name: Run UCC MPI tests (valgrind)
     agentSelector: "{nodeLabel: 'swx-clx01'}"
     run: |
-      echo "INFO: Run UCC MPI tests"
+      echo "INFO: Run UCC MPI tests (valgrind)"
       ${WORKSPACE}/.ci/scripts/run_tests_ucc_mpi_docker.sh
   #============================================================================
-  - name: Run DLRM tests (UCC/GPU)
+  - name: Stop docker containers (valgrind)
     agentSelector: "{nodeLabel: 'swx-clx01'}"
     run: |
-      echo "INFO: Run DLRM tests (UCC/GPU)"
-      ${WORKSPACE}/.ci/scripts/run_dlrm_docker.sh
-  #============================================================================
-  - name: Stop docker containers
-    agentSelector: "{nodeLabel: 'swx-clx01'}"
-    run: |
-      echo "INFO: Stop docker containers"
+      echo "INFO: Stop docker containers (valgrind)"
       ${WORKSPACE}/.ci/scripts/stop_docker.sh
   #============================================================================
