--- a/.ci/job_matrix.yaml
+++ b/.ci/job_matrix.yaml
@@ -40,7 +40,7 @@ runs_on_dockers:
     tag: '${BUILD_NUMBER}',
     arch: 'x86_64',
     uri: '${UCC_URI_SUFFIX_VALGRIND}',
-    build_args: '--rm --no-cache --build-arg CUDA_VER=${CUDA_VER} -build-arg NVIDIA_ROOT_DIR=${NVIDIA_ROOT_DIR} --build-arg ENABLE_VALGRIND=yes',
+    build_args: '--rm --no-cache --build-arg CUDA_VER=${CUDA_VER} --build-arg NVIDIA_ROOT_DIR=${NVIDIA_ROOT_DIR} --build-arg ENABLE_VALGRIND=yes',
     cloud: 'swx-k8s',
     nodeLabel: 'dockerserver && swx-clx01',
   }
