SCHEDULE: rework listeners
    Change the implementation of event manager to support subscription
    on the same event with different handlers for different parent tasks

--- a/test/gtest/Makefile.am
+++ b/test/gtest/Makefile.am
@@ -82,6 +82,7 @@ gtest_SOURCES =                     \
 	core/test_allgatherv.cc         \
 	core/test_bcast.cc              \
 	core/test_allreduce.cc          \
+	core/test_schedule.cc           \
 	utils/test_string.cc            \
 	utils/test_ep_map.cc            \
 	utils/test_lock_free_queue.cc   \
