TEST: Updated torch_ucc repo, fixed cmake issue
Signed-off-by: artemry-nv <artemry@nvidia.com>

--- a/.ci/job_matrix.yaml
+++ b/.ci/job_matrix.yaml
@@ -46,6 +46,8 @@ runs_on_dockers:
 runs_on_agents:
   - nodeLabel: 'swx-clx01'
 
+timeout_minutes: 120
+
 steps:
   #============================================================================
   - name: Check Code Format
@@ -54,14 +56,15 @@ steps:
       echo "INFO: check code format"
       ${SRC_DIR}/ucc/.ci/scripts/check_code_format.sh
   #============================================================================
-  - name: Run UCC tests
-    containerSelector: "{name:'centos8'}"
-    run: |
-      echo "INFO: Run UCC tests"
-      hostname
-      cat /proc/1/cgroup
-      pip3 list | grep torch
-      ${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh
+  # TODO temporarily excluded because UCC unit tests corrupts the CI cluster
+  #- name: Run UCC tests
+  #  containerSelector: "{name:'centos8'}"
+  #  run: |
+  #    echo "INFO: Run UCC tests"
+  #    hostname
+  #    cat /proc/1/cgroup
+  #    pip3 list | grep torch
+  #    ${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh
   #============================================================================
   - name: Run Torch-UCC tests (UCC)
     containerSelector: "{name:'centos8'}"
