--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -40,6 +40,8 @@ noinst_HEADERS =                      \
 	core/ucc_team.h                   \
 	core/ucc_ee.h                     \
 	core/ucc_progress_queue.h         \
+	core/ucc_topo.h                   \
+	core/ucc_sbgp.h                   \
 	schedule/ucc_schedule.h           \
 	coll_score/ucc_coll_score.h       \
 	utils/ucc_compiler_def.h          \
@@ -83,6 +85,8 @@ libucc_la_SOURCES =                  \
 	core/ucc_progress_queue.c        \
 	core/ucc_progress_queue_st.c     \
 	core/ucc_progress_queue_mt.c     \
+	core/ucc_topo.c                  \
+	core/ucc_sbgp.c                  \
 	schedule/ucc_schedule.c          \
 	coll_score/ucc_coll_score.c      \
 	coll_score/ucc_coll_score_map.c  \
