--- a/tools/perf/Makefile.am
+++ b/tools/perf/Makefile.am
@@ -22,7 +22,8 @@ ucc_perftest_SOURCES =        \
 	ucc_pt_coll_alltoall.cc   \
 	ucc_pt_coll_alltoallv.cc  \
 	ucc_pt_coll_barrier.cc    \
-	ucc_pt_coll_bcast.cc
+	ucc_pt_coll_bcast.cc      \
+	ucc_pt_coll_reduce.cc
 
 CXX=$(MPICXX)
 LD=$(MPICXX)
