--- a/cmake/ucc-config.cmake.in
+++ b/cmake/ucc-config.cmake.in
@@ -2,7 +2,7 @@
 # Copyright (C) NVIDIA Corporation. 2021.  ALL RIGHTS RESERVED.
 #
 
-set(UCC_LIBRARIES "@prefix@/lib")
-set(UCC_INCLUDE_DIRS "@prefix@/include")
-
 include("${CMAKE_CURRENT_LIST_DIR}/ucc-targets.cmake")
+
+set(UCC_LIBRARIES "@libdir@")
+set(UCC_INCLUDE_DIRS "@includedir@")
