--- a/cmake/ucc-targets.cmake.in
+++ b/cmake/ucc-targets.cmake.in
@@ -2,9 +2,12 @@
 # Copyright (C) NVIDIA Corporation. 2021.  ALL RIGHTS RESERVED.
 #
 
+set(prefix "@prefix@")
+set(exec_prefix "@exec_prefix@")
+
 add_library(ucc::ucc SHARED IMPORTED)
 
 set_target_properties(ucc::ucc PROPERTIES
-  IMPORTED_LOCATION "@prefix@/lib/libucc.so"
-  INTERFACE_INCLUDE_DIRECTORIES "@prefix@/include"
+  IMPORTED_LOCATION "@libdir@/libucc.so"
+  INTERFACE_INCLUDE_DIRECTORIES "@includedir@"
 )
