--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -63,6 +63,7 @@ noinst_HEADERS =                      \
 	utils/profile/ucc_profile.h       \
 	utils/profile/ucc_profile_on.h    \
 	utils/profile/ucc_profile_off.h   \
+	utils/ucc_time.h                  \
 	components/base/ucc_base_iface.h  \
 	components/cl/ucc_cl.h            \
 	components/cl/ucc_cl_log.h        \
