--- a/test/gtest/Makefile.am
+++ b/test/gtest/Makefile.am
@@ -86,6 +86,7 @@ gtest_SOURCES =                     \
 	core/test_schedule.cc           \
 	core/test_topo.cc               \
 	core/test_service_coll.cc       \
+	core/test_timeout.cc            \
 	utils/test_string.cc            \
 	utils/test_ep_map.cc            \
 	utils/test_lock_free_queue.cc   \
