MC: Add Average reduce op

--- a/src/components/tl/ucp/Makefile.am
+++ b/src/components/tl/ucp/Makefile.am
@@ -63,6 +63,7 @@ sources =                 \
 	tl_ucp_ep.c           \
 	tl_ucp_coll.c         \
 	tl_ucp_service_coll.c \
+	tl_ucp_reduce.h       \
 	$(barrier)            \
 	$(alltoall)           \
 	$(alltoallv)          \
