API: Add Bfloat16 datatype

--- a/test/gtest/Makefile.am
+++ b/test/gtest/Makefile.am
@@ -91,6 +91,7 @@ gtest_SOURCES =                     \
 	utils/test_string.cc            \
 	utils/test_ep_map.cc            \
 	utils/test_lock_free_queue.cc   \
+	utils/test_math.cc              \
 	coll_score/test_score.cc        \
 	coll_score/test_score_str.cc    \
 	coll_score/test_score_update.cc
