REVIEW: address comments
    add cl hier schedule mpool
    cache top_sbgp on team
    improve params description
    comment sbgp

--- a/src/components/cl/hier/Makefile.am
+++ b/src/components/cl/hier/Makefile.am
@@ -13,6 +13,7 @@ sources =             \
 	cl_hier_context.c \
 	cl_hier_team.c    \
 	cl_hier_coll.c    \
+	cl_hier_coll.h    \
 	$(allreduce)
 
 module_LTLIBRARIES         = libucc_cl_hier.la
