CL/HIER: 2LvL RAB (reduce_allreduce_bcast) Allreduce algorithm (#328)
* TL/UCP: fix ep mapping

* CL/HIER: 2lvl allreduce

    RAB Allreduce: ReduceAllreduceBcast

* REVIEW: address comments

    add cl hier schedule mpool
    cache top_sbgp on team
    improve params description
    comment sbgp

* CODESTYLE: apply clang

--- a/src/components/cl/hier/Makefile.am
+++ b/src/components/cl/hier/Makefile.am
@@ -2,13 +2,19 @@
 # Copyright (C) Mellanox Technologies Ltd. 2020-2021.  ALL RIGHTS RESERVED.
 #
 
-sources =              \
+allreduce =                   \
+	allreduce/allreduce.h     \
+	allreduce/allreduce_rab.c
+
+sources =             \
 	cl_hier.h         \
 	cl_hier.c         \
 	cl_hier_lib.c     \
 	cl_hier_context.c \
 	cl_hier_team.c    \
-	cl_hier_coll.c
+	cl_hier_coll.c    \
+	cl_hier_coll.h    \
+	$(allreduce)
 
 module_LTLIBRARIES         = libucc_cl_hier.la
 libucc_cl_hier_la_SOURCES  = $(sources)
