CORE: new dt/op proposal #1

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,6 +48,8 @@ noinst_HEADERS =                      \
 	core/ucc_topo.h                   \
 	core/ucc_sbgp.h                   \
 	core/ucc_service_coll.h           \
+	core/ucc_dt.h	                  \
+	core/ucc_op.h	                  \
 	schedule/ucc_schedule.h           \
 	schedule/ucc_schedule_pipelined.h \
 	coll_score/ucc_coll_score.h       \
@@ -97,6 +99,8 @@ libucc_la_SOURCES =                   \
 	core/ucc_topo.c                   \
 	core/ucc_sbgp.c                   \
 	core/ucc_service_coll.c           \
+	core/ucc_dt.c                     \
+	core/ucc_op.c                     \
 	schedule/ucc_schedule.c           \
 	schedule/ucc_schedule_pipelined.c \
 	coll_score/ucc_coll_score.c       \
