--- a/.ci/Dockerfile.centos8
+++ b/.ci/Dockerfile.centos8
@@ -1,51 +1,5 @@
-ARG CUDA_VER='11.2.1'
-FROM nvidia/cuda:${CUDA_VER}-devel-centos8
-#==============================================================================
-ARG NVIDIA_ROOT_DIR=/opt/nvidia
-ENV SRC_DIR=${NVIDIA_ROOT_DIR}/src
-ENV PKG_DIR=${NVIDIA_ROOT_DIR}/pkg
-ENV BIN_DIR=${NVIDIA_ROOT_DIR}/bin
-ENV WORKLOADS_DIR=${NVIDIA_ROOT_DIR}/workloads
-ENV TORCH_UCC_GITHUB_URL=https://github.com/facebookresearch/torch_ucc.git
-ENV TORCH_UCC_BRANCH=main
-ENV CUDA_HOME=/usr/local/cuda
-ENV UCX_GITHUB_URL=https://github.com/openucx/ucx.git
-ENV UCX_BRANCH=master
-ENV UCX_BUILD_TYPE=release-mt
-ENV UCX_INSTALL_DIR=${BIN_DIR}/ucx/build-${UCX_BUILD_TYPE}
-ENV UCC_INSTALL_DIR=${BIN_DIR}/ucc/build
-#==============================================================================
-RUN yum groupinstall -y \
-    'Development Tools' \
-    'Infiniband Support'
-RUN yum config-manager --set-enabled powertools && yum install -y \
-    numactl \
-    numactl-devel \
-    openmpi \
-    openmpi-devel \
-    openssh-server \
-    protobuf-compiler \
-    protobuf-devel \
-    python36-devel \
-    rdma-core-devel \
-    vim \
-    wget
-# Remove old UCX
-RUN rpm -e --nodeps ucx
-ENV PATH=/usr/lib64/openmpi/bin:$PATH
-RUN echo "export PATH=\"/usr/lib64/openmpi/bin:\$PATH\"" >> /etc/bashrc && \
-    export LD_LIBRARY_PATH=\"/usr/lib64/openmpi/lib:\${LD_LIBRARY_PATH}\" >> /etc/bashrc
-RUN cd /tmp && wget https://github.com/Kitware/CMake/releases/download/v3.20.4/cmake-3.20.4-linux-x86_64.sh && \
-    chmod +x /tmp/cmake-3.20.4-linux-x86_64.sh && /tmp/cmake-3.20.4-linux-x86_64.sh --skip-license --prefix=/usr && \
-    rm -f /tmp/cmake-3.20.4-linux-x86_64.sh
-#==============================================================================
-# Configure SSH
-RUN mkdir -p /var/run/sshd && \
-    cat /etc/ssh/ssh_config | grep -v StrictHostKeyChecking > /etc/ssh/ssh_config.new && \
-    echo "    StrictHostKeyChecking no" >> /etc/ssh/ssh_config.new && \
-    mv /etc/ssh/ssh_config.new /etc/ssh/ssh_config && \
-    ssh-keygen -A &&  \
-    rm -f /run/nologin
+FROM harbor.mellanox.com/torch-ucc/ucc/1.0.0/x86_64/centos8/cuda11.4.2:base
+
 #==============================================================================
 RUN mkdir -p ${SRC_DIR} && \
     mkdir -p ${PKG_DIR} && \
