--- a/.ci/Dockerfile.fedora33
+++ b/.ci/Dockerfile.fedora33
@@ -1,37 +1,4 @@
-FROM harbor.mellanox.com/torch-ucc/fedora:33
-
-RUN dnf install -y \
-    autoconf \
-    automake \
-    cmake \
-    cppcheck \
-    csclng \
-    cscppc \
-    csmock-common \
-    doxygen \
-    file \
-    gcc-c++ \
-    git \
-    git-clang-format \
-    glibc-devel \
-    java-1.8.0-openjdk-devel \
-    libtool \
-    make \
-    maven \
-    numactl-devel \
-    python \
-    rdma-core-devel \
-    rpm-build \
-    && dnf clean dbcache packages
-
-RUN export TMP_DIR=/tmp/llvm-project && \
-    git clone https://github.com/openucx/llvm-project.git --depth=1 -b ucx-clang-format --single-branch ${TMP_DIR} && \
-    mkdir -p ${TMP_DIR}/build && \
-    cd ${TMP_DIR}/build && \
-    cmake -DCMAKE_BUILD_TYPE=Release -DLLVM_ENABLE_PROJECTS=clang -G "Unix Makefiles" ../llvm && \
-    make -j$(nproc) && \
-    make install \
-    && rm -rf ${TMP_DIR}
+FROM harbor.mellanox.com/ucx/fedora33:1
 
 RUN mkdir -p /opt/nvidia/src/ucc
 COPY . /opt/nvidia/src/ucc
