--- a/.ci/job_matrix.yaml
+++ b/.ci/job_matrix.yaml
@@ -1,6 +1,8 @@
 ---
 job: 'ucc'
 
+step_allow_single_selector: true
+
 registry_host: 'harbor.mellanox.com'
 registry_path: '/torch-ucc'
 registry_auth: '05d98651-e11c-4a57-9cc6-52df79014b89'
@@ -12,14 +14,18 @@ volumes:
   - { mountPath: '/.autodirect/sw/release', hostPath: '/.autodirect/sw/release' }
 
 env:
-  CUDA_VER: '11.2.1'
+  CUDA_VER: '11.4.2'
   UCC_URI_SUFFIX: 'ucc/${UCC_VERSION}/x86_64/centos8/cuda${CUDA_VER}'
   UCC_DOCKER_IMAGE_NAME: '${registry_host}${registry_path}/${UCC_URI_SUFFIX}'
   NVIDIA_ROOT_DIR: '/opt/nvidia'
   SRC_DIR: '${NVIDIA_ROOT_DIR}/src'
   BIN_DIR: '${NVIDIA_ROOT_DIR}/bin'
+  DOCKER_OPT: '--pull always --network=host --uts=host --ipc=host --ulimit stack=67108864 --ulimit memlock=-1 --security-opt seccomp=unconfined --cap-add=SYS_ADMIN --device=/dev/infiniband/ --gpus all --user root'
 
-docker_opt: '--pull always --network=host --uts=host --ipc=host --ulimit stack=67108864 --ulimit memlock=-1 --security-opt seccomp=unconfined --cap-add=SYS_ADMIN --device=/dev/infiniband/ --gpus all --user root'
+docker_opt: "$DOCKER_OPT"
+
+kubernetes:
+  cloud: 'swx-k8s'
 
 runs_on_dockers:
   - {
@@ -29,14 +35,14 @@ runs_on_dockers:
     arch: 'x86_64',
     uri: '${UCC_URI_SUFFIX}',
     build_args: '--rm --no-cache --build-arg CUDA_VER=${CUDA_VER} --build-arg NVIDIA_ROOT_DIR=${NVIDIA_ROOT_DIR}',
-    cloud: 'swx-k8s',
-    nodeLabel: 'dockerserver && swx-clx01',
+    cloud: 'swx-k8s'
   }
   - {
     file: '.ci/Dockerfile.fedora33',
     name: 'fedora33',
     tag: 'latest',
     arch: 'x86_64',
+    category: 'tool',
     uri: 'x86_64/fedora33',
     build_args: '--rm --no-cache',
     cloud: 'swx-k8s',
@@ -51,27 +57,46 @@ timeout_minutes: 120
 steps:
   #============================================================================
   - name: Check Code Format
-    containerSelector: "{name:'fedora33'}"
+    containerSelector: "{name:'fedora33', category: 'tool'}"
     run: |
       echo "INFO: check code format"
       ${SRC_DIR}/ucc/.ci/scripts/check_code_format.sh
   #============================================================================
+  - name: Start docker
+    agentSelector: "{nodeLabel: 'swx-clx01'}"
+    #containerSelector: "{name:'skip-container'}"
+    run: |
+      echo "INFO: Start docker containers"
+      DOCKER_IMAGE_NAME="${UCC_DOCKER_IMAGE_NAME}:${BUILD_ID}"
+      docker pull ${DOCKER_IMAGE_NAME}
+      docker create -ti --rm $DOCKER_OPT ${DOCKER_IMAGE_NAME} /bin/bash > ${WORKSPACE}/ucc_docker.id
+      docker start $(cat ${WORKSPACE}/ucc_docker.id)
+
+  #============================================================================
   - name: Run UCC tests
-    containerSelector: "{name:'centos8'}"
+    agentSelector: "{nodeLabel: 'swx-clx01'}"
     run: |
       echo "INFO: Run UCC tests"
       hostname
-      ${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh
+      docker exec $(cat ${WORKSPACE}/ucc_docker.id) bash -c "\${SRC_DIR}/ucc/.ci/scripts/run_tests_ucc.sh"
   #============================================================================
   - name: Run Torch-UCC tests (UCC)
-    containerSelector: "{name:'centos8'}"
+    agentSelector: "{nodeLabel: 'swx-clx01'}"
     run: |
       echo "INFO: Run Torch-UCC tests (UCC)"
       hostname
-      ${SRC_DIR}/ucc/.ci/scripts/run_tests_torch_ucc.sh
+      docker exec $(cat ${WORKSPACE}/ucc_docker.id) bash -c "\${SRC_DIR}/ucc/.ci/scripts/run_tests_torch_ucc.sh"
+  #============================================================================
+  - name: Stop docker
+    agentSelector: "{nodeLabel: 'swx-clx01'}"
+    #containerSelector: "{name:'skip-container'}"
+    run: |
+      echo "INFO: Stop docker containers"
+      docker rm --force $(cat ${WORKSPACE}/ucc_docker.id)
   #============================================================================
   - name: Run docker containers
     agentSelector: "{nodeLabel: 'swx-clx01'}"
+    #containerSelector: "{name:'skip-container'}"
     run: |
       echo "INFO: Run docker containers"
       ${WORKSPACE}/.ci/scripts/run_docker.sh
