TL: SHM framework and bcast additions within private

--- a/src/components/tl/shm/Makefile.am
+++ b/src/components/tl/shm/Makefile.am
@@ -19,6 +19,7 @@ sources =                    \
 	tl_shm_coll.h            \
 	tl_shm_coll.c            \
 	tl_shm_knomial_pattern.h \
+	tl_shm_knomial_pattern.c \
 	$(bcast)                 \
 	$(reduce)
 
