TL/UCP: selection of kn algs

--- a/src/components/tl/ucp/Makefile.am
+++ b/src/components/tl/ucp/Makefile.am
@@ -54,7 +54,13 @@ reduce =	                 \
 
 reduce_scatter =	                        \
 	reduce_scatter/reduce_scatter.h         \
-	reduce_scatter/reduce_scatter_knomial.c
+	reduce_scatter/reduce_scatter.c         \
+	reduce_scatter/reduce_scatter_knomial.c \
+	reduce_scatter/reduce_scatter_ring.c
+
+reduce_scatterv =	                          \
+	reduce_scatterv/reduce_scatterv.h         \
+	reduce_scatterv/reduce_scatterv.c
 
 scatter =	                   \
 	scatter/scatter.h          \
@@ -80,6 +86,7 @@ sources =                 \
 	$(bcast)              \
 	$(reduce)             \
 	$(reduce_scatter)     \
+	$(reduce_scatterv)    \
 	$(scatter)
 
 module_LTLIBRARIES = libucc_tl_ucp.la
