REVIEW: fix review comments

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,8 +34,6 @@ noinst_HEADERS =                      \
 	core/ucc_global_opts.h            \
 	core/ucc_lib.h                    \
 	core/ucc_context.h                \
-	core/ucc_mc.h                     \
-	core/ucc_ec.h                     \
 	core/ucc_team.h                   \
 	core/ucc_ee.h                     \
 	core/ucc_progress_queue.h         \
@@ -74,8 +72,10 @@ noinst_HEADERS =                      \
 	components/cl/ucc_cl_type.h       \
 	components/tl/ucc_tl.h            \
 	components/tl/ucc_tl_log.h        \
+	components/mc/ucc_mc.h            \
 	components/mc/base/ucc_mc_base.h  \
 	components/mc/ucc_mc_log.h        \
+	components/ec/ucc_ec.h            \
 	components/ec/base/ucc_ec_base.h  \
 	components/ec/ucc_ec_log.h        \
 	coll_patterns/recursive_knomial.h \
@@ -89,8 +89,6 @@ libucc_la_SOURCES =                   \
 	core/ucc_global_opts.c            \
 	core/ucc_version.c                \
 	core/ucc_context.c                \
-	core/ucc_mc.c                     \
-	core/ucc_ec.c                     \
 	core/ucc_team.c                   \
 	core/ucc_ee.c                     \
 	core/ucc_coll.c                   \
@@ -116,7 +114,9 @@ libucc_la_SOURCES =                   \
 	components/base/ucc_base_iface.c  \
 	components/cl/ucc_cl.c            \
 	components/tl/ucc_tl.c            \
+	components/mc/ucc_mc.c            \
 	components/mc/base/ucc_mc_base.c  \
+	components/ec/ucc_ec.c            \
 	components/ec/base/ucc_ec_base.c  \
 	components/topo/ucc_topo.c        \
 	components/topo/ucc_sbgp.c
