--- a/src/components/ec/cuda/kernel/Makefile.am
+++ b/src/components/ec/cuda/kernel/Makefile.am
@@ -1,8 +1,15 @@
 #
-# Copyright (C) Mellanox Technologies Ltd. 2021.  ALL RIGHTS RESERVED.
+# Copyright (C) Mellanox Technologies Ltd. 2022.  ALL RIGHTS RESERVED.
 #
 
-NVCCFLAGS = ${AM_CPPFLAGS} ${UCS_CPPFLAGS} ${NVCC_CFLAGS} -I${UCC_TOP_BUILDDIR} -I${UCC_TOP_SRCDIR}/src -I${UCC_TOP_BUILDDIR}/src --compiler-options -fno-rtti,-fno-exceptions
+NVCCFLAGS =                                      \
+    ${AM_CPPFLAGS}                               \
+    ${UCS_CPPFLAGS}                              \
+    ${NVCC_CFLAGS}                               \
+    -I${UCC_TOP_BUILDDIR}                        \
+    -I${UCC_TOP_SRCDIR}/src                      \
+    -I${UCC_TOP_BUILDDIR}/src                    \
+    --compiler-options -fno-rtti,-fno-exceptions
 
 LINK = $(LIBTOOL) --mode=link $(CC) -o $@
 
