TEST: azure warning

--- a/.azure/azure-pipelines-pr.yml
+++ b/.azure/azure-pipelines-pr.yml
@@ -58,6 +58,7 @@ stages:
               then
                   url="https://github.com/openucx/ucx/wiki/Code-style-checking"
                   echo "##vso[task.complete result=SucceededWithIssues;]DONE'Code is not formatted according to the code style, see $url for more info.'"
+                  echo "##vso[task.logissue type=warning]'Code is not formatted'"
               fi
 
   - stage: Test
