TL/NCCL: add gatherv

--- a/test/mpi/Makefile.am
+++ b/test/mpi/Makefile.am
@@ -25,7 +25,8 @@ ucc_test_mpi_SOURCES = \
 	test_reduce_scatter.cc  \
 	test_reduce_scatterv.cc \
 	test_reduce.cc          \
-	test_gather.cc
+	test_gather.cc          \
+	test_gatherv.cc
 
 CXX=$(MPICXX)
 LD=$(MPICXX)
